feat: add ap network visualization

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ __pycache__
 test/test_asuc.html
 test/test_asuc.html
 test/test_asuc.html
+test/test_asuc.html
+test/test_ap.html
+test/test_asuc.html
