update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@ test/test_asuc.html
 test/test_asuc.html
 test/test_ap.html
 test/test_asuc.html
+test/test_asuc - Copy.html
+test/test_asuc.html
+test/create_ap_p3_final.py
+test/create_asuc.py
+test/_all_final.html
+test/create_ap_p3_final.py
