feat: show downsteam nodes function
this function now supports displaying reversible reactions

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ test/create_ap_p3_final.py
 test/create_asuc.py
 test/_all_final.html
 test/create_ap_p3_final.py
+test/_amino_final.html
+test/create_ap_p3_final.py
